Updating .Rd files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,14 +5,14 @@ export(agg_eload_temp_df_to_hourly)
 export(agg_eload_temp_df_to_monthly)
 export(agg_to_daily)
 export(agg_to_hourly)
+export(calculate_avoided_energy_use)
 export(calculate_coverage)
 export(calculate_savings_uncertainty)
-export(compute_avoided_energy_use)
+export(create_TOWT_weighted_reg)
 export(create_temp_matrix)
-export(create_towt_weighted_reg)
 export(find_occ_unocc)
-export(fit_towt_reg)
+export(fit_TOWT_reg)
 export(model_with_CP)
 export(model_with_HDD_CDD)
 export(model_with_SLR)
-export(model_with_towt)
+export(model_with_TOWT)
