--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Author: c(person("Sharma", "Mrinalini", email = "msharma@kw-engineering.com", ro
 			 person("Jump", "David", email = "djump@kw-engineering.com", role = "cph")),
 Description: 
 License: Refer to License.txt file
+BugReports: https://github.com/kW-Labs/nmecr/issues
 Depends: R (>= 3.1.0),
     dplyr
 Imports: 
@@ -21,3 +22,7 @@ Imports:
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
