--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,8 +19,7 @@ Imports:
     readxl,
     openxlsx,
     segmented,
-    moments,
-    lmtest
+    moments
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
