exporting find_occ_unocc for use

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(calculate_model_predictions)
 export(calculate_savings_and_uncertainty)
 export(calculate_summary_statistics)
 export(create_dataframe)
+export(find_occ_unocc)
 export(model_demand_with_TOWT)
 export(model_with_CP)
 export(model_with_HDD_CDD)
