--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,6 @@ Description: nmecr builds statistical energy data models and provides a comprehe
 License: Refer to License.txt file
 BugReports: https://github.com/kW-Labs/nmecr/issues
 Depends: R (>= 3.5.0),
-    dplyr,
     tidyverse,
     lubridate,
     readxl,
@@ -19,9 +18,11 @@ Depends: R (>= 3.5.0),
     segmented,
     moments,
     magrittr,
-    assertive
+    assertive,
+    xts,
+    zoo,
+    timetk
 Imports: 
-    dplyr,
     tidyverse,
     lubridate,
     readxl,
@@ -29,7 +30,10 @@ Imports:
     segmented,
     moments,
     magrittr,
-    assertive
+    assertive,
+    xts,
+    zoo,
+    timetk
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
