--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,42 +2,32 @@ Package: nmecr
 Type: Package
 Title: An implementation of peer-reviewed energy data analysis algorithms for site-specific M&V
 Version: 1.0.9
-Author: c(person("Sharma", "Mrinalini", email = "msharma@kw-engineering.com", role = c("aut", "cre")),
+Authors@R: c(person("Sharma", "Mrinalini", email = "msharma@kw-engineering.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-1511-2561")),
 			 person("Johnson", "Devan", email = "djohnson@kw-engineering.com", role = c("ctb", "cph")),
-			 person("Jump", "David", email = "djump@kw-engineering.com", role = "cph")),
+			 person("Jump", "David", email = "djump@kw-engineering.com", role = "cph"))
 Description: nmecr builds statistical energy data models and provides a comprehensive assessment of model fit and prediction accuracy.
   It provides the complete portfolio of the industry standard energy data modeling algorithms and includes an enhancement that allows 
   data modeling of energy profiles with distinct energy use regimens for improved predictive accuracy. 
-License: Refer to License.txt file
+License: MIT + file LICENSE
 BugReports: https://github.com/kW-Labs/nmecr/issues
-Depends: R (>= 3.5.0),
-    tidyverse,
-    lubridate,
-    readxl,
-    openxlsx,
-    segmented,
-    moments,
-    magrittr,
-    assertive,
-    xts,
-    zoo,
-    timetk
+Depends: R (>= 3.5)
 Imports: 
-    tidyverse,
+    dplyr,
     lubridate,
-    readxl,
-    openxlsx,
     segmented,
-    moments,
     magrittr,
     assertive,
     xts,
     zoo,
-    timetk
+    timetk,
+    purrr,
+    stats,
+    methods
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
