--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 1.0.16
 Authors@R: c(
   person("Jacoby", "Maggie", email = "mjacoby@kw-engineering.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-9394-5393")),
   person("Johnson", "Devan", email = "djohnson@kw-engineering.com", role = c("ctb", "cph"), comment = c(ORCID = "0000-0002-4566-4308")),
-  person("Jump", "David", email = "djump@kw-engineering.com", role = c("cph"), comment = c(ORCID = "0000-0002-5014-8789")),
+  person("Jump", "David", email = "djump@kw-engineering.com", role = "cph"), comment = c(ORCID = "0000-0002-5014-8789")),
   person("Luu", "Dexter", email = "dluu@kw-engineering.com", role = c("aut", "cre")),
   person("Sharma", "Mrinalini", role = c("ctb"), comment = c(ORCID = "0000-0002-1511-2561")),
   person("Wolfe", "Kyle", role = "ctb"))
