--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Type: Package
 Title: An implementation of peer-reviewed energy data analysis algorithms for site-specific M&V
 Version: 1.0.16
 Authors@R: c(
-  person("Luu", "Dexter", email = "dluu@kw-engineering.com", role = c("aut", "cre"), comment = c(ORCID = "0009-0007-3416-3050")),
-  person("Jacoby", "Maggie", email = "mjacoby@kw-engineering.com", role = c("aut"), comment = c(ORCID = "0000-0001-9394-5393")),
+  person("Luu", "Dexter", email = "dluu@kw-engineering.com", role = c("aut"), comment = c(ORCID = "0009-0007-3416-3050")),
+  person("Jacoby", "Maggie", email = "mjacoby@kw-engineering.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-9394-5393")),
   person("Johnson", "Devan", email = "djohnson@kw-engineering.com", role = c("ctb", "cph"), comment = c(ORCID = "0000-0002-4566-4308")),
   person("Jump", "David", email = "djump@kw-engineering.com", role = c("cph"), comment = c(ORCID = "0000-0002-5014-8789")),
   person("Sharma", "Mrinalini", role = c("aut"), comment = c(ORCID = "0000-0002-1511-2561")),
